<resources>
    <string name="app_name">GitHub Client</string>
    <string name="user_avatar_description">User avatar</string>
    <string name="text_readme_empty">Readme are empty</string>
    <string name="like_text">👍</string>
    <string name="dislike_text">👎</string>
    <string name="laught_text">😄</string>
    <string name="confused_text">😕</string>
    <string name="heart_text">❤</string>
    <string name="hooray_text">🎉</string>
    <string name="rocket_text">🚀</string>
    <string name="eyes_text">👀</string>
    <string name="tv_readme_text_hint">Readme text:</string>
    <string name="tv_contributors_list_hint">Contributors list:</string>
    <string name="tv_contributors_list_are_empty">Contributors list are empty</string>
    <string name="tv_issues_list_hint">Issues list:</string>
    <string name="issues_list_are_empty">Issues list are empty</string>
    <string name="this_repository_empty_text">This repository is empty</string>
    <string name="the_list_of_repositories_is_empty">The list of repositories is empty</string>
    <string name="create_reaction_fail_text">Create reaction are failed</string>
    <string name="create_reaction_success_text">Create reaction successful</string>
    <string name="need_authorization_text">Need authorization</string>
    <string name="error_get_issue_comments_text">Error when get issue comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnSearch">search</string>
    <string name="search_button_text">Search</string>
    <string name="unknown_error_string">Unknown error</string>
    <string name="resource_not_found_text">Resource not found</string>
    <string name="api_rate_limit_exceed_text">Api rate limit exceed</string>
    <string name="user_unauthorize_text">User unathorized</string>
    <string name="no_network_connection_text">No network connection</string>
    <string name="unknown_error_text">Unknown error</string>
    <string name="search_users_hint_text">Search users</string>
    <string name="login_into_github_text">Login into GitHub</string>
    <string name="issue_comments_are_empty_text">Issue comments are empty</string>
    <string name="list_repositories_text">List repositories:</string>
    <string name="open_comments_text">Open comments</string>
</resources>